--- a/frontend/src/components/Shared/FormInput/FormInput.scss
+++ b/frontend/src/components/Shared/FormInput/FormInput.scss
@@ -3,3 +3,7 @@
   justify-content: space-between;
   margin-bottom: 5px;
 }
+
+.input .ant-form-item-explain, .ant-form-item-extra {
+  font-size: 0.67rem;
+}
