--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .app {
   display: flex;
   flex-direction: column;
@@ -7,5 +9,34 @@
 
   .content {
     flex: 1 0;
+
+    .container {
+      width: 100%;
+      margin: auto;
+
+      @media (min-width: $sm) {
+        width: 540px;
+
+        @media (min-width: $md) {
+          width: 720px;
+        }
+
+        @media (min-width: $lg) {
+          width: 960px;
+        }
+
+        @media (min-width: $xl) {
+          width: 1140px;
+        }
+
+        @media (min-width: $xxl) {
+          width: 1320px;
+        }
+      }
+    }
   }
+}
+
+.no-margin {
+  margin: 0 !important;
 }
