--- a/frontend/src/components/Auth/Auth.scss
+++ b/frontend/src/components/Auth/Auth.scss
@@ -1,7 +1,7 @@
 $padding: 40px;
 
 // auth container styles
-.container {
+.auth-container {
   width: 100vw;
   min-height: 100vh;
   padding: $padding;
@@ -10,10 +10,9 @@ $padding: 40px;
     padding: 0;
   }
 
-  .content {
+  .auth-content {
     width: 100%;
     height: 100%;
-    //min-height: calc(100vh - 2 * #{$padding});
     background-color: #fff;
     padding: 24px;
     position: relative;
