--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,1 +1,11 @@
 $primary: #1890ff;
+
+// height without navbar and footer
+$trimmedHeight: calc(100vh - 134px);
+
+// breakpoints
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$xxl: 1400px;
