--- a/frontend/src/components/Auth/Auth.scss
+++ b/frontend/src/components/Auth/Auth.scss
@@ -3,6 +3,7 @@ $padding: 40px;
 // auth container styles
 .auth-container {
   width: 100vw;
+  height: 100%;
   min-height: 100vh;
   padding: $padding;
 
@@ -13,6 +14,7 @@ $padding: 40px;
   .auth-content {
     width: 100%;
     height: 100%;
+    min-height: calc(100vh - 2 * #{$padding});
     background-color: #fff;
     padding: 24px;
     position: relative;
