--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -3,51 +3,100 @@
 $background: rgba(#fff, 0.8);
 
 .navbar {
-  display: flex;
-  background: #fff;
+  background: #000;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  //padding: 0 5px 0 10px;
 
-  &.mobile .brand {
-    margin: 0 2rem 0 1rem;
-  }
-
-  .brand {
-    text-decoration: none;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #000;
-    font-size: 2rem;
-    margin: 0 2rem 0 0;
-
-
-  }
-
-  .navigation {
+  .navbar-container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    flex-grow: 1;
-  }
+    align-items: center;
+    margin: auto;
+    max-width: 400px;
 
-  .buttons {
-    .button:first-of-type {
-      margin-right: 1rem;
+    @media (min-width: $sm) {
+      max-width: 540px;
+    }
+    @media (min-width: $md) {
+      max-width: 720px;
+    }
+    @media (min-width: $lg) {
+      max-width: 960px;
+    }
+    @media (min-width: $xl) {
+      max-width: 1140px;
+    }
+
+    .brand {
+      text-decoration: none;
+      font-family: $quicksand;
+      color: #e9e9e9;
+      font-size: 16px;
+
+      @media (min-width: $md) {
+        font-size: 18px;
+      }
+
+      :hover {
+        color: #e9e9e9;
+      }
+    }
+
+    .navigation {
+      display: flex;
+      justify-content: space-between;
+
+      .menu {
+        background: #000;
+        border: none;
+
+        .menu-item {
+          font-family: $lato;
+          border: none;
+
+          a {
+            color: #6e6e6e;
+          }
+
+          &.ant-menu-item-selected,
+          &:hover {
+            border: none;
+
+            a {
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+
+    .drawer-btn {
+      color: #fff;
+      border-right: -8px;
+
+      &:hover {
+        color: $primary;
+      }
+    }
+
+    .user-btn {
+      cursor: pointer;
+      color: #fff;
     }
   }
+}
 
-  .drawer-btn {
-    position: absolute;
-    left: 16px;
-    top: 16px;
+.drawer {
+  .ant-drawer-header {
+    border-bottom: 1px solid $primary;
+    .ant-drawer-title {
+      font-family: $lato;
+    }
   }
-
-  .user-btn {
-    position: absolute;
-    right: 16px;
-    top: 16px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  .drawer-menu {
+    .menu-item {
+      font-family: $lato;
+    }
   }
 }
