--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Quicksand&family=Roboto&display=swap');
+
 $primary: #1890ff;
+$text: #fff;
+$secondaryText: #6e6e6e;
+$lightGray: #e9e9e9;
 
 // height without navbar and footer
 $trimmedHeight: calc(100vh - 134px);
@@ -9,3 +14,7 @@ $md: 768px;
 $lg: 992px;
 $xl: 1200px;
 $xxl: 1400px;
+
+$lato: 'Lato', sans-serif;
+$quicksand: 'Quicksand', sans-serif;
+$roboto: 'Roboto', sans-serif;
