--- a/frontend/src/components/Home/Home.scss
+++ b/frontend/src/components/Home/Home.scss
@@ -4,86 +4,144 @@
   width: 100%;
   height: calc(100vh - 134px);
   background: #fff;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
 
-  .first {
-    width: 100%;
-    height: 50%;
-    grid-area: first;
-    background-size: cover;
-    background: url('../../assets/knarrholmen.png') center;
-    flex: 1 1 auto;
+  .container {
+    padding-top: 40px;
 
-    .content {
-      width: 100%;
-      height: 100%;
-      background: rgba(#fff, 0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+    .search-field {
+      margin: auto;
+      width: 306px;
+      display: block;
 
-      .title {
-        display: block;
-        text-align: center;
+      @media (min-width: $md) {
+        width: 296px;
+      }
+      @media (min-width: $xl) {
+        width: 324px;
       }
 
-      .search-container {
-        width: 80%;
-        max-width: 500px;
-        border: 1px solid rgba(#000, 0.3);
+      ::placeholder,
+      ::-ms-input-placeholder {
+        font-family: $roboto;
+        font-size: 12px;
+      }
+    }
 
-        .search-field {
-          display: block;
-          border: 6px solid rgba(#fff, 0.8);
+    .activity-list {
+      display: flex;
+      flex-direction: column;
+
+      @media (min-width: $xl) {
+        flex-direction: row;
+        justify-content: center;
+      }
+
+      .activity {
+        width: 306px;
+        padding: 10px;
+        margin: 10px auto;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        border: 1px solid $lightGray;
+        cursor: pointer;
+
+        @media (min-width: $md) {
+          width: 452px;
+          padding: 20px;
+          margin: 20px auto;
+        }
+        @media (min-width: $xl) {
+          width: 210px;
+          margin: 20px;
+          padding: 0;
+          border: none;
+          display: flex;
+          flex-direction: column;
+        }
+
+        &:hover {
+          box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        }
+
+        .img {
+          background: #cecece;
+          width: 50px;
+          height: 50px;
+          margin-right: 10px;
+          float: left;
+
+          @media (min-width: $md) {
+            width: 80px;
+            height: 80px;
+            margin-right: 20px;
+          }
+          @media (min-width: $xl) {
+            width: 210px;
+            height: 210px;
+            margin-bottom: 10px;
+          }
+        }
+
+        .info {
+          margin-top: -3px;
+          flex: 1;
+          display: grid;
+          grid-template-areas:
+            'title open'
+            'location .';
+
+          @media (min-width: $xl) {
+            flex: none;
+            padding: 10px 10px 30px 10px;
+          }
+
+          span {
+            font-family: $roboto;
+            font-size: 10px;
+            color: $secondaryText;
+            margin: 0;
+
+            &.title {
+              color: #000;
+              font-size: 14px;
+              width: 100%;
+              height: 17px;
+              line-height: 17px;
+              vertical-align: middle;
+              grid-area: title;
+            }
+
+            &.location {
+              grid-area: location;
+            }
+
+            &.open {
+              grid-area: open;
+              text-align: right;
+            }
+          }
         }
       }
     }
-  }
 
-  .second {
-    height: 50%;
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px;
-  }
+    .showMore {
+      margin: 20px auto;
+      display: block;
+      color: #000;
+      border: 1px solid #000;
+      font-family: $roboto;
+      font-size: 12px;
+      width: 120px;
+      height: 35px;
+      line-height: 35px;
+      vertical-align: middle;
+      text-transform: uppercase;
+      padding: 0 15px;
 
-  .container {
-    width: 100%;
-    max-width: 1000px;
-    margin: auto;
-    padding-top: 100px;
-
-    .booking-img {
-      width: 300px;
-      float: right;
-      margin-top: 50px;
+      &:hover {
+        color: $primary;
+        border-color: $primary;
+      }
     }
   }
-}
-
-// shape divider
-.shape-divider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.shape-divider svg {
-  position: relative;
-  display: block;
-  width: calc(131% + 1.3px);
-  height: 100px;
-}
-
-.shape-divider .shape-fill {
-  fill: #ffffff;
 }
