--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -28,3 +28,100 @@ code {
     max-width: 1140px;
   }
 }
+
+.activity-list {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+
+  @media (min-width: $xl) {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .activity {
+    width: 306px;
+    padding: 10px;
+    margin: 5px auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    border: 1px solid $lightGray;
+    cursor: pointer;
+
+    @media (min-width: $md) {
+      width: 452px;
+      padding: 20px;
+      margin: 10px auto;
+    }
+    @media (min-width: $xl) {
+      width: 210px;
+      margin: 20px;
+      padding: 0;
+      border: none;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &:hover {
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+    .img {
+      background: #cecece;
+      width: 50px;
+      height: 50px;
+      margin-right: 10px;
+      float: left;
+
+      @media (min-width: $md) {
+        width: 80px;
+        height: 80px;
+        margin-right: 20px;
+      }
+      @media (min-width: $xl) {
+        width: 210px;
+        height: 210px;
+        margin-bottom: 10px;
+      }
+    }
+
+    .info {
+      flex: 1;
+      display: grid;
+      grid-template-areas:
+            'title open'
+            'location .';
+
+      @media (min-width: $xl) {
+        flex: none;
+        padding: 10px 10px 30px 10px;
+      }
+
+      span {
+        font-family: $roboto;
+        font-size: 12px;
+        color: $secondaryText;
+        margin: 0;
+
+        &.title {
+          color: #000;
+          font-size: 16px;
+          width: 100%;
+          height: 17px;
+          line-height: 17px;
+          vertical-align: middle;
+          grid-area: title;
+        }
+
+        &.location {
+          grid-area: location;
+        }
+
+        &.open {
+          grid-area: open;
+          text-align: right;
+        }
+      }
+    }
+  }
+}
