--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Quicksand&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Quicksand&family=Open+Sans&display=swap');
 
 $primary: #1890ff;
 $text: #fff;
@@ -17,4 +17,4 @@ $xxl: 1400px;
 
 $lato: 'Lato', sans-serif;
 $quicksand: 'Quicksand', sans-serif;
-$roboto: 'Roboto', sans-serif;
+$openSans: 'Open Sans', sans-serif;
