--- a/frontend/src/components/Auth/Auth.scss
+++ b/frontend/src/components/Auth/Auth.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 $padding: 40px;
 
 // auth container styles
@@ -38,7 +40,7 @@ $padding: 40px;
       max-width: 500px;
 
       .title {
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: $lato;
         font-size: 2rem;
         text-align: center;
         margin-bottom: 10px;
