--- a/frontend/src/components/Home/Home.scss
+++ b/frontend/src/components/Home/Home.scss
@@ -49,7 +49,7 @@
 
       ::placeholder,
       ::-ms-input-placeholder {
-        font-family: $roboto;
+        font-family: $openSans;
         font-size: 12px;
       }
     }
@@ -59,7 +59,7 @@
       display: block;
       color: #000;
       border: 1px solid #000;
-      font-family: $roboto;
+      font-family: $openSans;
       font-size: 12px;
       width: 120px;
       height: 35px;
