--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@ $background: rgba(#fff, 0.8);
 .navbar {
   background: #000;
   width: 100%;
-  //padding: 0 5px 0 10px;
+  padding: 0;
 
   .navbar-container {
     width: 100%;
@@ -14,18 +14,24 @@ $background: rgba(#fff, 0.8);
     align-items: center;
     margin: auto;
     max-width: 400px;
+    box-sizing: border-box;
+    padding: 0 20px;
 
     @media (min-width: $sm) {
       max-width: 540px;
+      padding: 0;
     }
     @media (min-width: $md) {
       max-width: 720px;
+      padding: 0;
     }
     @media (min-width: $lg) {
       max-width: 960px;
+      padding: 0;
     }
     @media (min-width: $xl) {
       max-width: 1140px;
+      padding: 0;
     }
 
     .brand {
